A few Google AppEngine compatibility changes .. not there yet.